mod: simple change to test

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <div class="sidebar">
-        <div class="app-title">Simple Notes</div>
+        <div class="app-title">Really Simple Notes</div>
         <div class="categories">
             <div class="category active" data-id="all">
                 <div class="category-icon">📄</div>
