mod: prefer simple message to image in top left corner

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -14,7 +14,10 @@
 </head>
 <body>
     <div class="sidebar">
-        <div class="app-title">Really Simple Notes</div>
+       <div class="frontpage-image">
+          <img src="images/simple-notes.png" alt="Simple Notes"
+        onerror="this.outerHTML='<div class=\'fallback-text\'>Welcome to Simple Notes!</div>'" > 
+       </div>
         <div class="categories">
             <div class="category active" data-id="all">
                 <div class="category-icon">📄</div>
