add: login/logout function

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -18,6 +18,9 @@
           <img src="images/simple-notes.png" alt="Simple Notes"
         onerror="this.outerHTML='<div class=\'fallback-text\'>Welcome to Simple Notes!</div>'" > 
        </div>
+       <div class="sidebar-footer">
+        <button id="logoutBtn" class="logout-btn">Logout</button>
+      </div>
         <div class="categories">
             <div class="category active" data-id="all">
                 <div class="category-icon">📄</div>
