add: new emojis

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -61,22 +61,43 @@
                 <div class="icon-selector-label">Select an icon:</div>
                 <div class="icon-grid" id="iconGrid">
                     <div class="icon-item selected" data-icon="📁">📁</div>
-                    <div class="icon-item" data-icon="📝">📝</div>
-                    <div class="icon-item" data-icon="📌">📌</div>
-                    <div class="icon-item" data-icon="💼">💼</div>
-                    <div class="icon-item" data-icon="🏠">🏠</div>
-                    <div class="icon-item" data-icon="🔖">🔖</div>
-                    <div class="icon-item" data-icon="📚">📚</div>
-                    <div class="icon-item" data-icon="💡">💡</div>
-                    <div class="icon-item" data-icon="🎓">🎓</div>
-                    <div class="icon-item" data-icon="🎯">🎯</div>
-                    <div class="icon-item" data-icon="📊">📊</div>
-                    <div class="icon-item" data-icon="📅">📅</div>
-                    <div class="icon-item" data-icon="❤️">❤️</div>
-                    <div class="icon-item" data-icon="🍎">🍎</div>
-                    <div class="icon-item" data-icon="🚗">🚗</div>
-                    <div class="icon-item" data-icon="✈️">✈️</div>
-                </div>
+                      <!-- Original icons -->
+                      <div class="icon-item selected" data-icon="📁">📁</div>
+                      <div class="icon-item" data-icon="📝">📝</div>
+                      <div class="icon-item" data-icon="📌">📌</div>
+                      <div class="icon-item" data-icon="💼">💼</div>
+                      <div class="icon-item" data-icon="🏠">🏠</div>
+                      <div class="icon-item" data-icon="🔖">🔖</div>
+                      <div class="icon-item" data-icon="📚">📚</div>
+                      <div class="icon-item" data-icon="💡">💡</div>
+                      <div class="icon-item" data-icon="🎓">🎓</div>
+                      <div class="icon-item" data-icon="🎯">🎯</div>
+                      <div class="icon-item" data-icon="📊">📊</div>
+                      <div class="icon-item" data-icon="📅">📅</div>
+                      <div class="icon-item" data-icon="❤️">❤️</div>
+                      <div class="icon-item" data-icon="🍎">🍎</div>
+                      <div class="icon-item" data-icon="🚗">🚗</div>
+                      <div class="icon-item" data-icon="✈️">✈️</div>
+                      
+                      <!-- Additional icons -->
+                      <div class="icon-item" data-icon="⭐">⭐</div>
+                      <div class="icon-item" data-icon="🔥">🔥</div>
+                      <div class="icon-item" data-icon="💰">💰</div>
+                      <div class="icon-item" data-icon="🏆">🏆</div>
+                      <div class="icon-item" data-icon="🎵">🎵</div>
+                      <div class="icon-item" data-icon="🎮">🎮</div>
+                      <div class="icon-item" data-icon="💻">💻</div>
+                      <div class="icon-item" data-icon="📱">📱</div>
+                      <div class="icon-item" data-icon="🌟">🌟</div>
+                      <div class="icon-item" data-icon="🏋️">🏋️</div>
+                      <div class="icon-item" data-icon="🧠">🧠</div>
+                      <div class="icon-item" data-icon="🍔">🍔</div>
+                      <div class="icon-item" data-icon="🍕">🍕</div>
+                      <div class="icon-item" data-icon="🚀">🚀</div>
+                      <div class="icon-item" data-icon="🌍">🌍</div>
+                      <div class="icon-item" data-icon="🔒">🔒</div>              
+                    </div>
+
             </div>
             <input type="hidden" id="categoryIconInput" value="📁">
             <input type="hidden" id="categoryEditId">
