--- a/frontend/login.html
+++ b/frontend/login.html
@@ -2,55 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <meta name="theme-color" content="#6200ee">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <title>Simple Notes - Login</title>
-    <link rel="stylesheet" href="css/styles.css">
-    <style>
-        .login-container {
-            width: 100%;
-            height: 100vh;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-        }
-        .login-form {
-            background-color: white;
-            padding: 30px;
-            border-radius: 8px;
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-            width: 100%;
-            max-width: 350px;
-        }
-        .login-title {
-            text-align: center;
-            margin-bottom: 20px;
-            font-size: 24px;
-            color: var(--primary-color);
-        }
-        .login-input {
-            width: 100%;
-            padding: 10px;
-            margin-bottom: 15px;
-            border-radius: var(--border-radius);
-            border: 1px solid #e0e0e0;
-        }
-        .login-btn {
-            width: 100%;
-            padding: 12px;
-            background-color: var(--primary-color);
-            color: white;
-            border: none;
-            border-radius: var(--border-radius);
-            cursor: pointer;
-            font-weight: 600;
-        }
-        .login-error {
-            color: #f44336;
-            text-align: center;
-            margin-bottom: 15px;
-            display: none;
-        }
-    </style>
+    
+    <!-- CSS files -->
+    <link rel="stylesheet" href="css/base.css">
+    <link rel="stylesheet" href="css/login.css">
+    <link rel="stylesheet" href="css/responsive.css">
 </head>
 <body>
     <div class="login-container">
