fix: difficult problem of delete icon visible through modal

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -26,6 +26,7 @@
     <link rel="stylesheet" href="css/modals.css">
     <link rel="stylesheet" href="css/responsive.css">
     <link rel="stylesheet" href="css/quill-editor.css">
+    <link rel="stylesheet" href="css/modal-fix.css">
 </head>
 <body>
     <div class="sidebar">
