fix: limit notes to 3 visible rows max

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -27,6 +27,7 @@
     <link rel="stylesheet" href="css/responsive.css">
     <link rel="stylesheet" href="css/quill-editor.css">
     <link rel="stylesheet" href="css/modal-fix.css">
+    <link rel="stylesheet" href="css/row-limit-fix.css">
 </head>
 <body>
     <div class="sidebar">
