fix: sidebar category name cutoff issue

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -28,6 +28,7 @@
     <link rel="stylesheet" href="css/quill-editor.css">
     <link rel="stylesheet" href="css/modal-fix.css">
     <link rel="stylesheet" href="css/row-limit-fix.css">
+    <link rel="stylesheet" href="css/sidebar-fix.css">
 </head>
 <body>
     <div class="sidebar">
