add: change category function

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -31,6 +31,7 @@
     <link rel="stylesheet" href="css/sidebar-fix.css">
     <link rel="stylesheet" href="css/dark-mode.css">
     <link rel="stylesheet" href="css/confirm-modal.css">
+    <link rel="stylesheet" href="css/note-category-selector.css">
 </head>
 <body>
     <div class="sidebar">
