add: username to header (rough)

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -71,6 +71,9 @@
     <div class="main">
         <div class="notes-header">
             <div class="current-category">All Notes</div>
+            <div class="user-info">
+              <span class="username-display" id="usernameDisplay">Loading...</span>
+            </div>
             <button class="add-note-btn" id="addNoteBtn">+</button>
         </div>
         <div class="notes-container" id="notesContainer">
