--- a/frontend/index.html
+++ b/frontend/index.html
@@ -32,6 +32,7 @@
     <link rel="stylesheet" href="css/dark-mode.css">
     <link rel="stylesheet" href="css/confirm-modal.css">
     <link rel="stylesheet" href="css/note-category-selector.css">
+    <link rel="stylesheet" href="css/toolbar-toggle.css">
 </head>
 <body>
     <div class="sidebar">
