fix: simplified topbar and sidebar

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -37,9 +37,11 @@
 <body>
     <div class="sidebar">
        <div class="frontpage-image">
-          <img src="images/simple-notes.png" alt="Simple Notes"
+         <!--  <img src="images/simple-notes.png" alt="Simple Notes"
         onerror="this.outerHTML='<div class=\'fallback-text\'>Welcome to Simple Notes!</div>'" > 
-       </div>
+
+         -->
+       </div> 
         <div class="categories">
           <div class="category active" data-id="all">
               <div class="category-icon">📄</div>
@@ -71,7 +73,7 @@
     
     <div class="main">
         <div class="notes-header">
-            <div class="current-category">All Notes</div>
+          <!-- <div class="current-category">All Notes</div>  -->
             <div class="user-info">
               <span class="username-display" id="usernameDisplay">Loading...</span>
             </div>
