add: spell check toggle to hide/unhide

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -33,6 +33,7 @@
     <link rel="stylesheet" href="css/confirm-modal.css">
     <link rel="stylesheet" href="css/note-category-selector.css">
     <link rel="stylesheet" href="css/toolbar-toggle.css">
+    <link rel="stylesheet" href="css/spellcheck-toggle.css">
 </head>
 <body>
     <div class="sidebar">
