--- a/frontend/index.html
+++ b/frontend/index.html
@@ -34,6 +34,7 @@
     <link rel="stylesheet" href="css/note-category-selector.css">
     <link rel="stylesheet" href="css/toolbar-toggle.css">
     <link rel="stylesheet" href="css/spellcheck-toggle.css">
+    <link rel="stylesheet" href="css/multi-category-modal.css">
 </head>
 <body>
     <div class="sidebar">
@@ -140,7 +141,7 @@
             <input type="hidden" id="categoryIconInput" value="📁">
             <input type="hidden" id="categoryEditId">
             <div class="modal-actions">
-                <button class="modal-btn modal-btn-cancel" id="cancelCategoryBtn">Cancel</button>
+                <button class="modal-btn modal-btn-cancel" id="cancelCategoryBtn">Close</button>
                 <button class="modal-btn modal-btn-confirm" id="confirmCategoryBtn">Add</button>
             </div>
         </div>
