fix: repositioned controls for ease of use

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -35,6 +35,7 @@
     <link rel="stylesheet" href="css/toolbar-toggle.css">
     <link rel="stylesheet" href="css/spellcheck-toggle.css">
     <link rel="stylesheet" href="css/multi-category-modal.css">
+    <link rel="stylesheet" href="css/note-controls.css">
 </head>
 <body>
     <div class="sidebar">
