--- a/frontend/index.html
+++ b/frontend/index.html
@@ -234,6 +234,7 @@
     <script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
     
     <!-- App JavaScript -->
+    <script type="module" src="js/sortNotes.js"></script>
     <script type="module" src="js/main.js"></script>
 </body>
 </html>
